# backend/src/routes/V1/userRoutes.ts
@@ -1,5 +1,12 @@
 import {Router} from 'express';
-import {getUsers, getUserPermissions, getUser, updateUserPermissions, getPermissionsByUserId} from '../../controllers/userController';
+import {
+    getUsers,
+    getUserPermissions,
+    getUser,
+    updateUserPermissions,
+    getPermissionsByUserId,
+    updateUserStatus
+} from '../../controllers/userController';
 import {requirePermission} from "../../middleware/permissionMiddleware";
 import {emptyMiddleware} from "../../middleware/emptyMiddleware";
 import {authenticateToken} from "../../middleware/authMiddleware";
@@ -112,6 +119,42 @@ router.patch('/permissions', authenticateToken,requirePermission('grant_permissi
  *         description: Forbidden (Missing permission)
  */
 router.get('/:id/permissions', authenticateToken, requirePermission('view_users'), getPermissionsByUserId);
+
+/**
+ * @swagger
+ * /api/v1/users/{id}/status:
+ *   patch:
+ *     summary: Update user status
+ *     tags: [Users]
+ *     security:
+ *       - bearerAuth: []
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         required: true
+ *         schema:
+ *           type: string
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             type: object
+ *             properties:
+ *               status:
+ *                 type: string
+ *                 description: New status for the user (e.g., active, inactive, suspended)
+ *     responses:
+ *       200:
+ *         description: User status updated
+ *       400:
+ *         description: Invalid request
+ *       401:
+ *         description: Unauthorized (No token or invalid token)
+ *       403:
+ *         description: Forbidden (Missing permission)
+ */
+router.patch('/:id/status', authenticateToken, requirePermission('edit_users'), updateUserStatus);
 
 
 export default router;
